--- a/src/mcode-pilot/components/TreatmentOptionsOutcomesTable/TreatmentOptionsOutcomesTable.scss
+++ b/src/mcode-pilot/components/TreatmentOptionsOutcomesTable/TreatmentOptionsOutcomesTable.scss
@@ -2,10 +2,15 @@
 @import '../../../styles/mixins/media-queries';
 
 .treatment-options-outcomes-table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 0;
+
     &__header {
-        display: flex;
-        align-items: flex-end;
-        margin: 10px;
+        td {
+            padding: 0 10px;
+            font-size: 1.1em;
+        }
 
         .compare-header {
             font-size: 0.9em;
@@ -18,7 +23,6 @@
 
         .user-icon {
             text-align: center;
-            margin-left: -2px;
         }
 
         .header-title {
@@ -54,16 +58,16 @@
     }
 
     &__table {
-        margin: 10px 10px 20px 10px;
+        td {
+            padding: 0 10px;
+            font-size: 1.1em;
+            vertical-align: middle;
+        }
 
-        .treatment-name {
-            display: flex;
-            align-items: center;
-
-            .select-icon {
-                padding-right: 10px;
-                cursor: pointer;
-            }
+        .select-icon {
+            padding-right: 10px;
+            cursor: pointer;
+            // width: 40px;
         }
 
         .treatments-title {
@@ -100,10 +104,6 @@
                 font-style: italic;
             }
 
-            .treatment-name {
-                min-width: 120px;
-            }
-
             .total-patients {
                 text-align: center;
             }
@@ -114,6 +114,10 @@
                 box-shadow: 0px 10px 8px -5px rgba(153, 153, 153, 1);
             }
         }
+    }
+
+    tfoot td {
+        padding: 10px 0;
     }
 
     .flex { display: flex; }
